--- a/generic_node.mustache
+++ b/generic_node.mustache
@@ -15,8 +15,9 @@ class Sv{{{nickname}}}(bpy.types.Node, SverchCustomTreeNode):
     {{/inputs}}
 
     def sv_init(self, context):
+        self.width *= 1.3
         {{#inputs}}
-        self.inputs.new('SvStringsSocket', '{{{name}}}').prop_name = 'sv_{{{name}}}'
+        self.inputs.new('SvLBSocket', '{{{name}}}').prop_name = 'sv_{{{name}}}'
         {{/inputs}}
         self.sv_output_names = [{{{output_name_list}}}]
         for name in self.sv_output_names:
